--- a/modules/Movecraft/pom.xml
+++ b/modules/Movecraft/pom.xml
@@ -137,7 +137,12 @@
             <version>8.3.1</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.MilkBowl</groupId>
+            <artifactId>VaultAPI</artifactId>
+            <version>1.7</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
