--- a/modules/Movecraft/src/main/resources/plugin.yml
+++ b/modules/Movecraft/src/main/resources/plugin.yml
@@ -6,6 +6,7 @@ authors: [BaccaYarro, cccm5, TylerS1066, eirik1996]
 website: https://github.com/APDevTeam/Movecraft
 main: net.countercraft.movecraft.Movecraft
 database: false
+softdepend: [Vault]
 commands:
   movecraft:
     description: base movecraft command
